1. Fix import time bug 2. enable cdx

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,5 +22,9 @@ play.modules.enabled += "scalikejdbc.PlayModule"
 play.modules.disabled += "play.api.db.DBModule"
 
 dataCopy {
-	enable = false
+	enable = true
+}
+
+cdx {
+  	enable = false
 }
